# musht

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: args.rs  args_tmp.rs  help.rs  main.rs  parser.rs
src/args/: host.rs
src/parser/: host.rs
