[package]
name = "musht"
version = "0.2.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
description = "a mosh client wrapper written in rust with support for domain port records"
homepage = "https://github.com/elliotnash/musht"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = [ "wrap_help" ] }
clap_generate = "3.0.0-beta.2"
trust-dns-resolver = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
regex = "1.4.3"
